--- a/ToDocalender/Base.lproj/Main.storyboard
+++ b/ToDocalender/Base.lproj/Main.storyboard
@@ -152,7 +152,9 @@
         <scene sceneID="a4I-OE-EzM">
             <objects>
                 <navigationController id="SJd-28-q6F" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Search" id="0Nc-oL-Eqv"/>
+                    <tabBarItem key="tabBarItem" title="Search" image="magnifyingglass" catalog="system" id="0Nc-oL-Eqv">
+                        <color key="badgeColor" red="1" green="0.46274509800000002" blue="0.52156862749999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </tabBarItem>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="1mR-B3-cMG">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -421,6 +423,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="magnifyingglass" catalog="system" width="64" height="56"/>
         <image name="penicon" width="54" height="54"/>
         <image name="plusicon2" width="54" height="54"/>
         <image name="tabbaricon1" width="30" height="30"/>
